Verison personalizada de mi web

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container header-bar">
       <!--Sustituir por los datos del alumno-->
-      <h3>Estibaliz Diez<span><img style="width: 134px; height: 114px;" class='img-circle' alt="Mi flor favorita" src="img/rosa.jpeg" align="right"></span></h3>
+      <h3>Estibaliz Diez<span><img style="width: 134px; height: 114px;" class='img-circle' alt="Mi flor" src="img/rosa.jpeg" align="right"></span></h3>
       <p>
         <!--Sustituir por los datos del alumno-->
         Desarrollo SW <br>
